--- a/tests/extensions/default/analyzers/Microsoft.UpgradeAssistant.Extensions.Default.Analyzers.Test/Microsoft.UpgradeAssistant.Extensions.Default.Analyzers.Test.csproj
+++ b/tests/extensions/default/analyzers/Microsoft.UpgradeAssistant.Extensions.Default.Analyzers.Test/Microsoft.UpgradeAssistant.Extensions.Default.Analyzers.Test.csproj
@@ -3,6 +3,7 @@
     <TargetFramework>net5.0</TargetFramework>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <GenerateBindingRedirectsOutputType>true</GenerateBindingRedirectsOutputType>
+    <IsTestProject>true</IsTestProject>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="MSTest.TestAdapter" />
