--- a/tests/components/Microsoft.UpgradeAssistant.Migrator.Test/Microsoft.UpgradeAssistant.Migrator.Test.csproj
+++ b/tests/components/Microsoft.UpgradeAssistant.Migrator.Test/Microsoft.UpgradeAssistant.Migrator.Test.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <IsPackable>false</IsPackable>
+    <IsTestProject>true</IsTestProject>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Moq" />
