--- a/tests/steps/Microsoft.UpgradeAssistant.Steps.Packages.Test/Microsoft.UpgradeAssistant.Steps.Packages.Test.csproj
+++ b/tests/steps/Microsoft.UpgradeAssistant.Steps.Packages.Test/Microsoft.UpgradeAssistant.Steps.Packages.Test.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <IsPackable>false</IsPackable>
+    <IsTestProject>true</IsTestProject>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Moq" />
