--- a/tests/Microsoft.UpgradeAssistant.TestHelpers/Microsoft.UpgradeAssistant.TestHelpers.csproj
+++ b/tests/Microsoft.UpgradeAssistant.TestHelpers/Microsoft.UpgradeAssistant.TestHelpers.csproj
@@ -5,5 +5,6 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\common\Microsoft.UpgradeAssistant.Abstractions\Microsoft.UpgradeAssistant.Abstractions.csproj" />
+    <ProjectReference Include="..\..\src\components\Microsoft.UpgradeAssistant.MSBuild\Microsoft.UpgradeAssistant.MSBuild.csproj" />
   </ItemGroup>
 </Project>
