--- a/tests/components/Microsoft.UpgradeAssistant.Migrator.Test/Microsoft.UpgradeAssistant.Migrator.Test.csproj
+++ b/tests/components/Microsoft.UpgradeAssistant.Migrator.Test/Microsoft.UpgradeAssistant.Migrator.Test.csproj
@@ -2,13 +2,15 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <IsPackable>false</IsPackable>
+    <IsTestProject>true</IsTestProject>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Moq" />
-    <PackageReference Include="MSTest.TestAdapter" />
-    <PackageReference Include="MSTest.TestFramework" />
-    <PackageReference Include="coverlet.collector" />
     <PackageReference Include="NSubstitute" />
+    <PackageReference Include="coverlet.collector">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\src\components\Microsoft.UpgradeAssistant.Migrator\Microsoft.UpgradeAssistant.Migrator.csproj" />
