--- a/tests/extensions/default/Microsoft.UpgradeAssistant.Extensions.Default.ConfigUpdaters.Tests/Microsoft.UpgradeAssistant.Extensions.Default.ConfigUpdaters.Tests.csproj
+++ b/tests/extensions/default/Microsoft.UpgradeAssistant.Extensions.Default.ConfigUpdaters.Tests/Microsoft.UpgradeAssistant.Extensions.Default.ConfigUpdaters.Tests.csproj
@@ -4,9 +4,11 @@
     <IsTestProject>true</IsTestProject>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="MSTest.TestAdapter" />
-    <PackageReference Include="MSTest.TestFramework" />
     <PackageReference Include="NSubstitute" />
+    <PackageReference Include="coverlet.collector">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\src\extensions\default\Microsoft.UpgradeAssistant.Extensions.Default.ConfigUpdaters\Microsoft.UpgradeAssistant.Extensions.Default.ConfigUpdaters.csproj" />
