--- a/tests/steps/Microsoft.UpgradeAssistant.Steps.Packages.Test/Microsoft.UpgradeAssistant.Steps.Packages.Test.csproj
+++ b/tests/steps/Microsoft.UpgradeAssistant.Steps.Packages.Test/Microsoft.UpgradeAssistant.Steps.Packages.Test.csproj
@@ -6,10 +6,10 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Moq" />
-    <PackageReference Include="MSTest.TestAdapter" />
-    <PackageReference Include="MSTest.TestFramework" />
-    <PackageReference Include="coverlet.collector" />
-    <PackageReference Include="Nuget.Frameworks" />
+    <PackageReference Include="coverlet.collector">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\src\components\Microsoft.UpgradeAssistant.Migrator\Microsoft.UpgradeAssistant.Migrator.csproj" />
