--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -5,4 +5,13 @@
       <PrivateAssets>All</PrivateAssets>
     </PackageReference>
   </ItemGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)'!='netstandard2.0'">
+    <!-- Exclude MSBuild runtime assets from both src and test projects
+         as they shouldn't be present in this solution's output paths.
+         Instead, these dependencies should be loaded from the selected
+         MSBuild's location. -->
+    <PackageReference Include="Microsoft.Build" ExcludeAssets="runtime" />
+    <PackageReference Include="Microsoft.Build.Framework" ExcludeAssets="runtime" />
+  </ItemGroup>
 </Project>
