--- a/src/components/Microsoft.UpgradeAssistant.Portability/Microsoft.DotNet.UpgradeAssistant.Portability.csproj
+++ b/src/components/Microsoft.UpgradeAssistant.Portability/Microsoft.DotNet.UpgradeAssistant.Portability.csproj
@@ -9,6 +9,6 @@
     <PackageReference Include="System.Reactive" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\common\Microsoft.UpgradeAssistant.Abstractions\Microsoft.UpgradeAssistant.Abstractions.csproj" />
+    <ProjectReference Include="..\..\common\Microsoft.UpgradeAssistant.Abstractions\Microsoft.DotNet.UpgradeAssistant.Abstractions.csproj" />
   </ItemGroup>
 </Project>
