--- a/src/extensions/default/analyzers/Microsoft.UpgradeAssistant.Extensions.Default.CSharp.CodeFixes/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.CSharp.CodeFixes.csproj
+++ b/src/extensions/default/analyzers/Microsoft.UpgradeAssistant.Extensions.Default.CSharp.CodeFixes/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.CSharp.CodeFixes.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" />
-    <ProjectReference Include="..\Microsoft.UpgradeAssistant.Extensions.Default.CSharp.Analyzers\Microsoft.UpgradeAssistant.Extensions.Default.CSharp.Analyzers.csproj" />
+    <ProjectReference Include="..\Microsoft.UpgradeAssistant.Extensions.Default.CSharp.Analyzers\Microsoft.DotNet.UpgradeAssistant.Extensions.Default.CSharp.Analyzers.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="Templates\*.cs" />
