--- a/src/steps/Microsoft.UpgradeAssistant.Steps.Configuration/Microsoft.DotNet.UpgradeAssistant.Steps.Configuration.csproj
+++ b/src/steps/Microsoft.UpgradeAssistant.Steps.Configuration/Microsoft.DotNet.UpgradeAssistant.Steps.Configuration.csproj
@@ -3,8 +3,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\common\Microsoft.UpgradeAssistant.Abstractions\Microsoft.UpgradeAssistant.Abstractions.csproj" />
-    <ProjectReference Include="..\..\extensions\Microsoft.UpgradeAssistant.Extensions\Microsoft.UpgradeAssistant.Extensions.csproj" />
+    <ProjectReference Include="..\..\common\Microsoft.UpgradeAssistant.Abstractions\Microsoft.DotNet.UpgradeAssistant.Abstractions.csproj" />
+    <ProjectReference Include="..\..\extensions\Microsoft.UpgradeAssistant.Extensions\Microsoft.DotNet.UpgradeAssistant.Extensions.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" />
