--- a/src/steps/Microsoft.UpgradeAssistant.Steps.Packages/Microsoft.DotNet.UpgradeAssistant.Steps.Packages.csproj
+++ b/src/steps/Microsoft.UpgradeAssistant.Steps.Packages/Microsoft.DotNet.UpgradeAssistant.Steps.Packages.csproj
@@ -8,8 +8,8 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\common\Microsoft.UpgradeAssistant.Abstractions\Microsoft.UpgradeAssistant.Abstractions.csproj" />
-    <ProjectReference Include="..\..\extensions\Microsoft.UpgradeAssistant.Extensions\Microsoft.UpgradeAssistant.Extensions.csproj" />
+    <ProjectReference Include="..\..\common\Microsoft.UpgradeAssistant.Abstractions\Microsoft.DotNet.UpgradeAssistant.Abstractions.csproj" />
+    <ProjectReference Include="..\..\extensions\Microsoft.UpgradeAssistant.Extensions\Microsoft.DotNet.UpgradeAssistant.Extensions.csproj" />
   </ItemGroup>
   <ItemGroup>
     <!-- NuGet package versions need to match those used by MSBuild, so load them from the local MSBuild install -->
