--- a/src/steps/Microsoft.UpgradeAssistant.Steps.ProjectFormat/Microsoft.DotNet.UpgradeAssistant.Steps.ProjectFormat.csproj
+++ b/src/steps/Microsoft.UpgradeAssistant.Steps.ProjectFormat/Microsoft.DotNet.UpgradeAssistant.Steps.ProjectFormat.csproj
@@ -3,7 +3,7 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\common\Microsoft.UpgradeAssistant.Abstractions\Microsoft.UpgradeAssistant.Abstractions.csproj" />
+    <ProjectReference Include="..\..\common\Microsoft.UpgradeAssistant.Abstractions\Microsoft.DotNet.UpgradeAssistant.Abstractions.csproj" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
     <PackageReference Include="Microsoft.Extensions.Options" />
   </ItemGroup>
