--- a/src/steps/Microsoft.UpgradeAssistant.Steps.Templates/Microsoft.DotNet.UpgradeAssistant.Steps.Templates.csproj
+++ b/src/steps/Microsoft.UpgradeAssistant.Steps.Templates/Microsoft.DotNet.UpgradeAssistant.Steps.Templates.csproj
@@ -11,9 +11,9 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Options" />
-    <ProjectReference Include="..\..\common\Microsoft.UpgradeAssistant.Abstractions\Microsoft.UpgradeAssistant.Abstractions.csproj" />
+    <ProjectReference Include="..\..\common\Microsoft.UpgradeAssistant.Abstractions\Microsoft.DotNet.UpgradeAssistant.Abstractions.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\extensions\Microsoft.UpgradeAssistant.Extensions\Microsoft.UpgradeAssistant.Extensions.csproj" />
+    <ProjectReference Include="..\..\extensions\Microsoft.UpgradeAssistant.Extensions\Microsoft.DotNet.UpgradeAssistant.Extensions.csproj" />
   </ItemGroup>
 </Project>
