--- a/tests/components/Microsoft.UpgradeAssistant.Migrator.Test/Microsoft.DotNet.UpgradeAssistant.Migrator.Test.csproj
+++ b/tests/components/Microsoft.UpgradeAssistant.Migrator.Test/Microsoft.DotNet.UpgradeAssistant.Migrator.Test.csproj
@@ -13,7 +13,7 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\src\components\Microsoft.UpgradeAssistant.Migrator\Microsoft.UpgradeAssistant.Migrator.csproj" />
-    <ProjectReference Include="..\..\Microsoft.UpgradeAssistant.TestHelpers\Microsoft.UpgradeAssistant.TestHelpers.csproj" />
+    <ProjectReference Include="..\..\..\src\components\Microsoft.UpgradeAssistant.Migrator\Microsoft.DotNet.UpgradeAssistant.Migrator.csproj" />
+    <ProjectReference Include="..\..\Microsoft.UpgradeAssistant.TestHelpers\Microsoft.DotNet.UpgradeAssistant.TestHelpers.csproj" />
   </ItemGroup>
 </Project>
