--- a/tests/tool/IntegrationTests/IntegrationTests.csproj
+++ b/tests/tool/IntegrationTests/IntegrationTests.csproj
@@ -16,8 +16,8 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\src\cli\Microsoft.UpgradeAssistant.Cli\Microsoft.UpgradeAssistant.Cli.csproj" />
-    <ProjectReference Include="..\..\Microsoft.UpgradeAssistant.TestHelpers\Microsoft.UpgradeAssistant.TestHelpers.csproj" />
+    <ProjectReference Include="..\..\..\src\cli\Microsoft.UpgradeAssistant.Cli\Microsoft.DotNet.UpgradeAssistant.Cli.csproj" />
+    <ProjectReference Include="..\..\Microsoft.UpgradeAssistant.TestHelpers\Microsoft.DotNet.UpgradeAssistant.TestHelpers.csproj" />
   </ItemGroup>
   <Target Name="MoveAnalyzersToSourceUpdatersDir" AfterTargets="Build">
     <PropertyGroup>
