--- a/src/extensions/Microsoft.DotNet.UpgradeAssistant.Extensions/Microsoft.DotNet.UpgradeAssistant.Extensions.csproj
+++ b/src/extensions/Microsoft.DotNet.UpgradeAssistant.Extensions/Microsoft.DotNet.UpgradeAssistant.Extensions.csproj
@@ -3,6 +3,7 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Autofac" />
     <PackageReference Include="Automapper" />
     <PackageReference Include="Microsoft.Extensions.Configuration" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" />
