Changing some settings to unblock Test run hang

--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -64,6 +64,7 @@ stages:
             value: Test
           - name: _BuildArgs
             value: /p:SignType=$(_SignType)
+              /p:DotNetSignType=$(_SignType)
         strategy:
           matrix:
             Debug:
