--- a/src/steps/Microsoft.DotNet.UpgradeAssistant.Steps.Backup/Microsoft.DotNet.UpgradeAssistant.Steps.Backup.csproj
+++ b/src/steps/Microsoft.DotNet.UpgradeAssistant.Steps.Backup/Microsoft.DotNet.UpgradeAssistant.Steps.Backup.csproj
@@ -3,6 +3,9 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Autofac" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\..\common\Microsoft.DotNet.UpgradeAssistant.Abstractions\Microsoft.DotNet.UpgradeAssistant.Abstractions.csproj" />
   </ItemGroup>
 </Project>
