--- a/src/steps/Microsoft.DotNet.UpgradeAssistant.Steps.Configuration/Microsoft.DotNet.UpgradeAssistant.Steps.Configuration.csproj
+++ b/src/steps/Microsoft.DotNet.UpgradeAssistant.Steps.Configuration/Microsoft.DotNet.UpgradeAssistant.Steps.Configuration.csproj
@@ -5,8 +5,10 @@
   <ItemGroup>
     <ProjectReference Include="..\..\common\Microsoft.DotNet.UpgradeAssistant.Abstractions\Microsoft.DotNet.UpgradeAssistant.Abstractions.csproj" />
     <ProjectReference Include="..\..\extensions\Microsoft.DotNet.UpgradeAssistant.Extensions\Microsoft.DotNet.UpgradeAssistant.Extensions.csproj" />
+    <ProjectReference Include="..\..\extensions\default\Microsoft.DotNet.UpgradeAssistant.Extensions.Default.ConfigUpdaters\Microsoft.DotNet.UpgradeAssistant.Extensions.Default.ConfigUpdaters.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Autofac" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" />
     <PackageReference Include="Microsoft.Extensions.Options" />
   </ItemGroup>
