--- a/src/steps/Microsoft.DotNet.UpgradeAssistant.Steps.Packages/Microsoft.DotNet.UpgradeAssistant.Steps.Packages.csproj
+++ b/src/steps/Microsoft.DotNet.UpgradeAssistant.Steps.Packages/Microsoft.DotNet.UpgradeAssistant.Steps.Packages.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <!-- NuGet package versions need to match those used by MSBuild, so load them from the local MSBuild install -->
     <PackageReference Include="NuGet.ProjectModel" ExcludeAssets="runtime" />
+    <PackageReference Include="Autofac" />
     <PackageReference Include="Microsoft.Extensions.Options" />
     <PackageReference Include="System.IO.FileSystem.Primitives" />
     <PackageReference Include="System.Linq.Async" />
