--- a/src/steps/Microsoft.DotNet.UpgradeAssistant.Steps.Templates/Microsoft.DotNet.UpgradeAssistant.Steps.Templates.csproj
+++ b/src/steps/Microsoft.DotNet.UpgradeAssistant.Steps.Templates/Microsoft.DotNet.UpgradeAssistant.Steps.Templates.csproj
@@ -10,10 +10,11 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Autofac" />
     <PackageReference Include="Microsoft.Extensions.Options" />
-    <ProjectReference Include="..\..\common\Microsoft.DotNet.UpgradeAssistant.Abstractions\Microsoft.DotNet.UpgradeAssistant.Abstractions.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\common\Microsoft.DotNet.UpgradeAssistant.Abstractions\Microsoft.DotNet.UpgradeAssistant.Abstractions.csproj" />
     <ProjectReference Include="..\..\extensions\Microsoft.DotNet.UpgradeAssistant.Extensions\Microsoft.DotNet.UpgradeAssistant.Extensions.csproj" />
   </ItemGroup>
 </Project>
