--- a/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/appsettings.json
+++ b/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/appsettings.json
@@ -24,13 +24,7 @@
   "Portability": {
     "ServiceEndpoint": "https://portability.dot.net"
   },
-  "ExtensionModules": [
-    "Microsoft.DotNet.UpgradeAssistant.Steps.Backup.dll",
-    "Microsoft.DotNet.UpgradeAssistant.Steps.Configuration.dll",
-    "Microsoft.DotNet.UpgradeAssistant.Steps.Packages.dll",
-    "Microsoft.DotNet.UpgradeAssistant.Steps.ProjectFormat.dll",
-    "Microsoft.DotNet.UpgradeAssistant.Steps.Solution.dll",
-    "Microsoft.DotNet.UpgradeAssistant.Steps.Source.dll",
-    "Microsoft.DotNet.UpgradeAssistant.Steps.Templates.dll"
+  "ExtensionServiceProviders": [
+    "Microsoft.DotNet.UpgradeAssistant.Extensions.Default.dll"
   ]
 }
