Change setting to use IsUnitTestProject

--- a/tests/extensions/default/analyzers/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers.Tests/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers.Tests.csproj
+++ b/tests/extensions/default/analyzers/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers.Tests/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers.Tests.csproj
@@ -3,7 +3,7 @@
     <TargetFramework>net5.0</TargetFramework>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <GenerateBindingRedirectsOutputType>true</GenerateBindingRedirectsOutputType>
-    <IsTestProject>true</IsTestProject>
+    <IsUnitTestProject>true</IsUnitTestProject>
   </PropertyGroup>
   <ItemGroup>
     <Compile Remove="assets\**" />
