--- a/tests/extensions/default/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.ConfigUpdaters.Tests/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.ConfigUpdaters.Tests.csproj
+++ b/tests/extensions/default/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.ConfigUpdaters.Tests/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.ConfigUpdaters.Tests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <IsTestProject>true</IsTestProject>
+    <IsUnitTestProject>true</IsUnitTestProject>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="NSubstitute" />
